<resources>
    <string name="app_name">CENIDET</string>
    <string name="registrate_ahora">REGISTRATE AHORA</string>
    <string name="registrate">REGISTRATE</string>
    <string name="todo">TODO</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="restablecer_contrasena">RESTABLECER CONTRASEÑA</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="registrate_aqui">REGISTRATE AQUI!!!</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="completa">COMPLETA INFORMACION</string>
    <string name="perfil">DE PERFIL</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="transicion_picture">transicionnamepicture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string-array name="tipocuenta">
        <item>Estudiante</item>
        <item>Docente</item>
        <item>Administrativo</item>
    </string-array>

    <string-array name="UID_Admins">
        <item>mbf5S4Kq1LYp0XrtMgyqiXVFcih1</item>
        <item>RquMZZgQ3FXmRByHSh6fJx4jO8e2</item>
        <item>9yroFHIs1nSVxfI5O71bwTtWFZH3</item>
    </string-array>

    //Aqui se puede modificar para todos las listas
    <string-array name="departamentos">
        <item>Dep. de Ingenieria Electronica</item>
        <item>Dep. de Ingenieria Mecanica</item>
        <item>Dep. de Ciencias Computacionales</item>
        <item>Dep. de Dess. Academico e Idiomas</item>
        <item>Dep. de Org. y Seguimiento de Estudios</item>
        <item>Oficina de Centro de Com. y Telec.</item>
        <item>Centro de Informacion</item>
        <item>Dep. de Plan., Prog. y Presupestacion</item>
        <item>Dep. de Gest. Tecn. y Vinculacion</item>
        <item>Dep. de Comunicacion y Eventos</item>
        <item>Dep. de Servicios Escolares</item>
        <item>Dep. de Recursos Materiales y Servicios</item>
        <item>Dep. de Recursos Humanos</item>
        <item>Dep. de Recursos Financieros</item>
    </string-array>

    <string-array name="departamento_externos">
        <item>Dep. de Ingenieria Electronica</item>
        <item>Dep. de Ingenieria Mecanica</item>
        <item>Dep. de Ciencias Computacionales</item>
        <item>Dep. de Dess. Academico e Idiomas</item>
        <item>Dep. de Org. y Seguimiento de Estudios</item>
        <item>Dep. de Gest. Tecn. y Vinculacion</item>
        <item>Dep. de Servicios Escolares</item>
    </string-array>

    <string name="Valor1">Respeto</string>
    <string name="DescripcionValor1">Respetar el criterio ajeno, sea éste igual o divergente del nuestro. Aplicar respeto total a la verdad, y no ser usuario del engaño y la mentira, ofrecer respeto total al desempeño del trabajo, y al derecho legal ajeno, cuidar que nuestros actos no sean causa de daños a nada ni a nadie. Respetar el medio ambiente y los recursos naturales.</string>
    <string name="Valor2">Honestidad</string>
    <string name="DescripcionValor2">Tener siempre una actitud correcta de respeto a las personas y a los hechos verdaderos. Rechazar el uso de la mentira y el engaño.</string>
    <string name="Valor3">Compromiso</string>
    <string name="DescripcionValor3">Principalmente con el objetivo de mejorar nuestra situación competitiva en materia de formación de recursos humanos en investigación y mantener la calidad en el servicio a nuestros clientes y mantener un ambiente laboral excelente.</string>
    <string name="Valor4">Responsabilidad</string>
    <string name="DescripcionValor4">Actuar con probidad, aplicando la normatividad, obligación con el deber cumpliendo la misión y la moral, y contribuir activa y voluntariamente al mejoramiento social, económico y ambiental.
    Eficaz y agradable, se encuentran las firmas que han encontrado el equilibrio perfecto entre sus competencias técnicas y su estrategia de servicio al cliente, son organizaciones que se enfocan en el cliente porque saben que es él de quien dependen, están conscientes de la fuerte competencia y sus perspectivas apuntan al liderazgo.</string>
    <string name="Valor5">Actitud de Servicio</string>
    <string name="DescripcionValor5">Ser eficaz y agradable, encontrando el equilibrio perfecto entre nuestras competencias técnicas y estrategias de servicio al cliente, como institución enfocarnos al cliente cumpliendo sus perspectivas y que ellos nos distingan por el liderazgo.</string>

    <string name="D_direccion">Dirección</string>
    <string name="D_direccion_telefono">362-7770 Ext.4101 362-7771</string>
    <string name="D_direccion_correo">dir_cenidet@tecnm.mx</string>
    <string name="D_subdireccion">Subdirección Académica</string>
    <string name="D_direccionD1">Subdirección Académico</string>
    <string name="D_subdireccion_telefono">362-7770 Ext.4104 362-7773</string>
    <string name="D_subdireccion_correo">acad_cenidet@tecnm.mx</string>
    <string name="D_die">Departamento de Ingeniería Electrónica</string>
    <string name="D_die_telefono">362-7770 Ext.2225 362-7776</string>
    <string name="D_die_correo">die@cenidet.tecnm.mx</string>
    <string name="D_dim">Departamento de Ingeniería Mecánica</string>
    <string name="D_dim_telefono">362-7770 Ext.1408 362-7777</string>
    <string name="D_dim_correo">dim@cenidet.tecnm.mx</string>
    <string name="D_dcc">Departamento de Ciencias Computacionales</string>
    <string name="D_dcc_telefono">362-7770 Ext.3202 362-7775</string>
    <string name="D_dcc_correo">dcc@cenidet.tecnm.mx</string>
    <string name="D_dda">Departamento de Desarrollo Académico e Idiomas</string>
    <string name="D_dda_telefono">362-7770 Ext.3224 362-7792</string>
    <string name="D_dda_correo">dda_cenidet@tecnm.mx</string>
    <string name="D_depi">Departamento de Organización y Seguimiento de Estudios</string>
    <string name="D_depi_telefono">362-7770 Ext.4204 362-7781</string>
    <string name="D_depi_correo">depi_cenidet@tecnm.mx</string>
    <string name="D_subPyV">Subdirección de Planeación y Vinculación</string>
    <string name="D_subPyV_telefono">362-7770 Ext.4103 362-7772</string>
    <string name="D_subPyV_correo">plan_cenidet@tecnm.mx</string>
    <string name="D_subPyV_occ">Oficina de Centro de Cómputo y Telecomunicaciones</string>
    <string name="D_subPyV_occ_telefono">362-7770 Ext.2108 362-7783</string>
    <string name="D_subPyV_occ_correo">cc_cenidet@tecnm.mx</string>
    <string name="D_subPyV_ci">Centro de Información</string>
    <string name="D_subPyV_ci_telefono">362-7770 Ext.2104 362-7780</string>
    <string name="D_subPyV_ci_correo">ci_cenidet@tecnm.mx</string>
    <string name="D_subPyV_ppp">Departamento de Planeación, Programación y Presupuestación</string>
    <string name="D_subPyV_ppp_telefono">362-7770 Ext.4107 362-7782</string>
    <string name="D_subPyV_ppp_correo">pl_cenidet@tecnm.mx</string>
    <string name="D_subPyV_gtv">Departamento de Gestión Tecnológica y Vinculación</string>
    <string name="D_subPyV_gtv_telefono">362-7770 Ext.4206 362-7784</string>
    <string name="D_subPyV_gtv_correo">vin_cenidet@tecnm.mx</string>
    <string name="D_subPyV_ce">Departamento de Comunicación y Eventos</string>
    <string name="D_subPyV_ce_telefono">362-7770 Ext.4201 362-7786</string>
    <string name="D_subPyV_ce_correo">cyd_cenidet@tecnm.mx</string>
    <string name="D_subSA">Subdirección de Servicios Administrativos</string>
    <string name="D_subSA_telefono">362-7770 Ext.4102 362-7774</string>
    <string name="D_subSA_correo">admon_cenidet@tecnm.mx</string>
    <string name="D_subSA_se">Departamento de Servicios Escolares</string>
    <string name="D_subSA_se_telefono">362-7770 Ext.4213 362-7789</string>
    <string name="D_subSA_se_correo">se_cenidet@tecnm.mx</string>
    <string name="D_subSA_rms">Departamento de Recursos Materiales y Servicios</string>
    <string name="D_subSA_rms_telefono">362-7770 Ext.4114 362-7790</string>
    <string name="D_subSA_rms_correo">rm_cenidet@tecnm.mx</string>
    <string name="D_subSA_rh">Departamento de Recursos Humanos</string>
    <string name="D_subSA_rh_telefono">362-7770 Ext.4210 362-7787</string>
    <string name="D_subSA_rh_correo">rh_cenidet@tecnm.mx</string>
    <string name="D_subSA_rf">Departamento de Recursos Financieros</string>
    <string name="D_subSA_rf_telefono">362-7770 Ext.4110 362-7788</string>
    <string name="D_subSA_rf_correo">rf_cenidet@tecnm.mx</string>
</resources>