<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegisterActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="#DFDFDF">

    <com.github.florent37.shapeofview.shapes.CircleView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="4dp"
        app:shape_circle_borderWidth="2dp">


      <View
          android:layout_width="match_parent"
          android:layout_height="match_parent" android:background="@color/colorPrimary" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="40dp"
          android:text="@string/registrate"
          android:textAlignment="center"
          android:textColor="@color/colorWhite"
          android:textSize="22sp"
          android:textStyle="bold" />

      <ImageView
          android:layout_width="130dp"
          android:layout_height="130dp"
          android:layout_gravity="center"
          android:layout_marginTop="30dp"
          android:contentDescription="@string/todo"
          android:src="@drawable/ic_person" />

    </com.github.florent37.shapeofview.shapes.CircleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="5dp"
          android:src="@drawable/ic_person_grey"
          android:contentDescription="@string/todo" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_usuario"
            android:inputType="textPersonName" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="5dp"
          android:src="@drawable/ic__email_grey"
          android:contentDescription="@string/todo" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="150dp"
          android:layout_height="match_parent"

          android:text="Tipo de cuenta: "
          android:textStyle="bold"
          android:textSize="20dp"
          android:layout_marginTop="10dp"
          android:textColor="#8F8F8F"
        />

      <Spinner
          android:id="@+id/spinner4"
          android:layout_width="wrap_content"
          android:layout_height="50dp"
          android:layout_gravity="right"
          android:entries="@array/tipocuenta"
          />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="5dp"
          android:src="@drawable/ic_baseline_credit_card_24"
          android:contentDescription="@string/todo" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="5dp"
          android:src="@drawable/ic_https_grey"
          android:contentDescription="@string/todo" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="5dp"
          android:src="@drawable/ic_https_grey"
          android:contentDescription="@string/todo" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

  </LinearLayout>

  <Button
      android:id="@+id/btnRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:text="@string/registrarse"
    android:background="@drawable/rounded_button"
    android:backgroundTint="@color/colorBlue"
    android:layout_gravity="bottom"
    android:textColor="@color/colorWhite"
    android:layout_margin="20dp"/>


  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/cricleimageback"
      android:layout_width="60dp"
      android:layout_height="50dp"
      android:src="@drawable/ic_arrow_left_"
      app:civ_circle_background_color="@color/colorPrimary"
      android:layout_marginTop="30dp"/>






</androidx.coordinatorlayout.widget.CoordinatorLayout>