<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#DFDFDF">

        <com.github.florent37.shapeofview.shapes.RoundRectView

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_circle_borderWidth="2dp">


            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/completa"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/perfil"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>



        </com.github.florent37.shapeofview.shapes.RoundRectView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_person_grey"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUsername2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_usuario"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"

                android:layout_marginTop="10dp"
                android:text="Tipo de cuenta: "
                android:textColor="#8F8F8F"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:entries="@array/tipocuenta" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_credit_card_24"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputMatricula2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Marticula/ ID Maestro"
                    android:inputType="textCapCharacters"
                    android:visibility="gone" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorBlue"
        android:layout_gravity="bottom"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_person_grey"
        app:civ_border_color="#eeeeee"
        app:civ_border_width="5dp"
        app:civ_circle_background_color="@color/colorWhite"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>